compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import gleam/foo.{bar}\n        import gleam/foo.{zoo}\n        pub fn go() { bar() + zoo() }\n        "
---
error: Duplicate import
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import gleam/foo.{bar}
  │         ^^^^^^^^^^^^^^^^^^^^^^ First imported here
3 │         import gleam/foo.{zoo}
  │         ^^^^^^^^^^^^^^^^^^^^^^ Reimported here

foo has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

